[package]
name = "pv-unlocker"
version = "0.9.0"
authors = ["Carl <carl@vadoola.com>"]
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
ab_versions = {git = "https://github.com/Vadoola/ab_versions_rs.git", tag = "v0.10.0"}
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
wild = "2.2"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
log = "0.4"
simplelog = "0.12.2"

[build-dependencies]
slint-build = "1.12.1"

[profile.release]
#https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = "z"
lto = true
codegen-units = 1
#panic = "abort"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
